# midas-journal-852

./: .gitignore  CMakeLists.txt  check.cxx  label_check.cxx  lm.cxx  perf3D.cxx
article/: Article.tex  InsightJournal.bib  Makefile
article/images/: demoEllipses42.eps  directionWeights2D.eps  discreteDisk.eps  discreteDisks.eps  discreteDisks2.eps  errorRelSquareRotated.eps  errorRotatedEllipses.eps  errorRotatedSquares.eps  errorSquareRotated.eps  perimEllipses42Boxplot.eps  perimRotatedEllipses.eps  perimRotatedSquares.eps  perimeterDisks.eps  roundnessDisk.eps  roundnessEllipses42Boxplot.eps
images/: ellipsesMorpho.txt
images/img3d/: ball_R30.tif  cube_S30_T00_P00.tif  cube_S30_T45_P00.tif  cube_S30_T45_P45.tif  ellipsoid_A10_B30_C30_T00_P00.tif  ellipsoid_A10_B30_C30_T45_P00.tif  ellipsoid_A10_B30_C30_T45_P45.tif  ellipsoid_A30_B10_C10_T00_P00.tif  ellipsoid_A30_B10_C10_T45_P00.tif  ellipsoid_A30_B10_C10_T45_P45.tif  ellipsoid_A30_B20_C10_T45_P00.tif  ellipsoid_A30_B20_C10_T45_P45.tif  hollowSphere_R30_I10.tif  torus_A30_B20_T45_P00.tif  torus_A30_B20_T45_P45.tif
images/rotatedImages3d/cube/: cube_S50_Ori002.tif  cube_S50_Ori003.tif  cube_S50_Ori004.tif  cube_S50_Ori005.tif  cube_S50_Ori006.tif  cube_S50_Ori007.tif  cube_S50_Ori008.tif  cube_S50_Ori009.tif  cube_S50_Ori010.tif  cube_S50_Ori011.tif  cube_S50_Ori012.tif  cube_S50_Ori013.tif  cube_S50_Ori014.tif  cube_S50_Ori015.tif  cube_S50_Ori016.tif  cube_S50_Ori017.tif  cube_S50_Ori018.tif  cube_S50_Ori019.tif  cube_S50_Ori020.tif  cube_S50_Ori021.tif  cube_S50_Ori022.tif  cube_S50_Ori023.tif  cube_S50_Ori024.tif  cube_S50_Ori025.tif  cube_S50_Ori026.tif  cube_S50_Ori027.tif  cube_S50_Ori028.tif  cube_S50_Ori029.tif  cube_S50_Ori030.tif  cube_S50_Ori031.tif  cube_S50_Ori032.tif  cube_S50_Ori033.tif  cube_S50_Ori034.tif  cube_S50_Ori035.tif  cube_S50_Ori036.tif  cube_S50_Ori037.tif  cube_S50_Ori038.tif  cube_S50_Ori039.tif  cube_S50_Ori040.tif  cube_S50_Ori041.tif  (+94 more)
images/rotatedImages3d/cylinder/: cylinder_L60_R20_Ori001.tif  cylinder_L60_R20_Ori002.tif  cylinder_L60_R20_Ori003.tif  cylinder_L60_R20_Ori004.tif  cylinder_L60_R20_Ori005.tif  cylinder_L60_R20_Ori006.tif  cylinder_L60_R20_Ori007.tif  cylinder_L60_R20_Ori008.tif  cylinder_L60_R20_Ori009.tif  cylinder_L60_R20_Ori010.tif  cylinder_L60_R20_Ori011.tif  cylinder_L60_R20_Ori012.tif  cylinder_L60_R20_Ori013.tif  cylinder_L60_R20_Ori014.tif  cylinder_L60_R20_Ori015.tif  cylinder_L60_R20_Ori016.tif  cylinder_L60_R20_Ori017.tif  cylinder_L60_R20_Ori018.tif  cylinder_L60_R20_Ori019.tif  cylinder_L60_R20_Ori020.tif  cylinder_L60_R20_Ori021.tif  cylinder_L60_R20_Ori022.tif  cylinder_L60_R20_Ori023.tif  cylinder_L60_R20_Ori024.tif  cylinder_L60_R20_Ori025.tif  cylinder_L60_R20_Ori026.tif  cylinder_L60_R20_Ori027.tif  cylinder_L60_R20_Ori028.tif  cylinder_L60_R20_Ori029.tif  cylinder_L60_R20_Ori030.tif  cylinder_L60_R20_Ori031.tif  cylinder_L60_R20_Ori032.tif  cylinder_L60_R20_Ori033.tif  cylinder_L60_R20_Ori034.tif  cylinder_L60_R20_Ori035.tif  cylinder_L60_R20_Ori036.tif  cylinder_L60_R20_Ori037.tif  cylinder_L60_R20_Ori038.tif  cylinder_L60_R20_Ori039.tif  cylinder_L60_R20_Ori040.tif  (+96 more)
images/rotatedImages3d/oblate/: oblate_A20_B40_Ori001.tif  oblate_A20_B40_Ori002.tif  oblate_A20_B40_Ori004.tif  oblate_A20_B40_Ori005.tif  oblate_A20_B40_Ori007.tif  oblate_A20_B40_Ori008.tif  oblate_A20_B40_Ori009.tif  oblate_A20_B40_Ori011.tif  oblate_A20_B40_Ori012.tif  oblate_A20_B40_Ori013.tif  oblate_A20_B40_Ori014.tif  oblate_A20_B40_Ori016.tif  oblate_A20_B40_Ori017.tif  oblate_A20_B40_Ori018.tif  oblate_A20_B40_Ori019.tif  oblate_A20_B40_Ori020.tif  oblate_A20_B40_Ori022.tif  oblate_A20_B40_Ori023.tif  oblate_A20_B40_Ori024.tif  oblate_A20_B40_Ori025.tif  oblate_A20_B40_Ori026.tif  oblate_A20_B40_Ori027.tif  oblate_A20_B40_Ori029.tif  oblate_A20_B40_Ori030.tif  oblate_A20_B40_Ori031.tif  oblate_A20_B40_Ori032.tif  oblate_A20_B40_Ori033.tif  oblate_A20_B40_Ori034.tif  oblate_A20_B40_Ori035.tif  oblate_A20_B40_Ori037.tif  oblate_A20_B40_Ori038.tif  oblate_A20_B40_Ori039.tif  (+90 more)
images/shiftedBalls/: generateBalls.m  res.txt
(+1120 files in other folders)
